change logo src

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--HEADER-->
 <div class="bg-dark p-4 mb-3 mb-md-5 d-flex align-items-center justify-content-center" style="position:relative">
     <a routerLink="/" class="d-none d-xl-inline-block" style="position:absolute;left:1rem">
-        <img alt="logo" src="../assets/images/IMG-20230625-WA0006.jpg" style="height:80px">
+        <img alt="logo" src="elsenyorde/assets/images/IMG-20230625-WA0006.jpg" style="height:80px">
     </a>
     <h1 class="text-center text-white">
         <small class="me-3 d-block d-xl-inline mb-3 mb-xl-0" style="font-size:1.2rem">Dirien nens amb molles a la mà: -és 
