update app with signals

--- a/src/rutes/map-rutes/map-rutes.component.html
+++ b/src/rutes/map-rutes/map-rutes.component.html
@@ -41,7 +41,7 @@
 <div class="punts-wrapper">
         <h3 class="text-crimson">Col·lecció de rutes guardades</h3>
         <div class="row g-0" style="margin: 0 -16px 0 -16px">
-<ng-container *ngFor="let ruta of rutesArray">
+<ng-container *ngFor="let ruta of rutesArray()">
    <div class="col-12 col-sm-6 col-md-4 col-lg-3 p-3">
                         <div class="card text-center h-100" style="position:relative">
                             <!-- <app-mini-map [lat]="marker.lat" [lng]="marker.lng"></app-mini-map> -->
