--- a/src/punts/punts.component.html
+++ b/src/punts/punts.component.html
@@ -4,7 +4,7 @@
 
     <section class="mb-5">
     <h3 class="text-crimson">Mapa de punts guardats</h3>
-    <div class="text-crimson">Clica el mapa per crear-hi un punt. A sota del mapa podràs completar la informació. 
+    <div class="text-crimson">Clica el punt del mapa que vulguis afegir. A sota del mapa podràs completar la informació. 
         Clica el botó "Crea el punt" i veuràs com s'afegeix un punt al mapa i com apareix la targeta del nou punt 
         a la col·lecció de baix. Les dues primeres targetes hi són per defecte, les pots eliminar.</div>
 
@@ -37,7 +37,7 @@
         <h3 class="text-crimson">Col·lecció de punts guardats</h3>
         <div class="row g-0" style="margin: 0 -16px 0 -16px">
         <!-- <ng-container *ngIf="markersArr!=true"> -->
-            <ng-container *ngFor="let marker of (markersArr$|async)">
+            <ng-container *ngFor="let marker of markersArr()">
                 
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 p-3">
                         <div class="card text-center h-100" style="position:relative">
@@ -67,7 +67,7 @@
         </ng-container>
         </div>
     </div>
-    <button *ngIf="(markersArr$|async)" (click)="deleteAllMarkers()" 
+    <button *ngIf="markersArr()" (click)="deleteAllMarkers()" 
     class="btn btn-danger mx-auto mt-4 text-crimson">Elimina tots els marcadors que has afegit</button>
 </section>
 <!-- </ng-container> -->
