change text landing, reorder styles, add .justify

--- a/src/landing/landing.component.html
+++ b/src/landing/landing.component.html
@@ -1,11 +1,18 @@
-<div class="text-center text-crimson mb-5" style="font-size:2.5rem; max-width:65%; margin:auto">Guarda els teus llocs preferits per fer una pausa, llegir, treballar... i les rutes per on t'agrada passejar</div>
-<div class="d-flex justify-content-center">
-    <a routerLink="/punts" class="me-3 me-sm-4 me-md-5" style="position:relative; width: 35%">
-        <img alt="senyor" src="./assets/images/senyor-lector.png" style="width:100%">
+<div class="text-center text-crimson mb-3 mb-md-4" style="font-size:2.5rem; max-width:65%; margin:auto">Guarda els teus llocs preferits per fer una pausa, llegir, treballar...
+    i les rutes per on t'agrada passejar</div>
+    <p class="mb-4 justify">El poeta Josep Carner va deixar escrit en un poema que de gran li agradaria passar el temps en un jardí "de brollador ben clar", 
+        i afegia: "De mi dirien nens amb molles a la mà: 'És el senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
+        descobrir racons per descansar, passejar, llegir, treballar (—jardins, places, cafeteries)... aquesta aplicació és per a tu. Pots guardar una col·lecció de "punts" i una altra de "rutes" 
+        amb la localització al mapa i les notes que hi vulguis afegir. Sigui per recordar detalls de tipus pragmàtic 
+        com el soroll d'ambient o la relació qualitat-preu del cafè que hi vas prendre o com a àlbum sentimental.
+    </p>
+<div class="row g-0 justify-content-center mb-5">
+    <a routerLink="/punts" class="me-5 me-lg-5 col-5 col-lg-4" style="position:relative">
+        <img alt="senyor llegint" src="./assets/images/senyor-lector.png" style="width:100%">
         <span class="img-text text-center text-dark" style="position:absolute; max-width: 50%; top: 18%; right:15px; font-size:1.2em">Llocs per estar tranquil</span>
     </a>
-    <a routerLink="/rutes" class="" style="position:relative; width: 35%">
-        <img alt="senyor" src="assets/images/senyor-pg.png" style="width:100%">
+    <a routerLink="/rutes" class="col-5 col-lg-4" style="position:relative">
+        <img alt="senyor passejant" src="assets/images/senyor-pg.png" style="width:100%">
         <span class="img-text text-dark fw-bold" style="position:absolute; top: 18%; right:15px; font-size:1.2em">Rutes per passejar</span>
     </a>
 </div>
