--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <h1 class="text-center text-white">
         <!-- <small class="me-3 d-block d-xl-inline mb-3 mb-xl-0" style="font-size:1.2rem">Dirien nens amb
         molles a la mà: -és </small> -->
-        el senyor de cada dia
+        El senyor de cada dia
     </h1>
 </div>
 <!--MAIN-->
