--- a/src/landing/landing.component.html
+++ b/src/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="text-center text-crimson mb-3 mb-md-4" style="font-size:2.5rem; max-width:65%; margin:auto">Guarda els teus llocs preferits per fer una pausa, llegir, treballar...
     i les rutes per on t'agrada passejar</div>
     <p class="mb-4 justify">El poeta Josep Carner va deixar escrit en un poema que de gran li agradaria passar el temps en un jardí "de brollador ben clar", 
-        i afegia: "De mi dirien nens amb molles a la mà: 'És el senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
+        i que en veure-l'hi "De mi dirien nens amb molles a la mà: 'És el senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
         descobrir racons per descansar, passejar, llegir, treballar (—jardins, places, cafeteries)... aquesta aplicació és per a tu. Pots guardar una col·lecció de "punts" i una altra de "rutes" 
         amb la localització al mapa i les notes que hi vulguis afegir. Sigui per recordar detalls de tipus pragmàtic 
         com el soroll d'ambient o la relació qualitat-preu del cafè que hi vas prendre o com a àlbum sentimental.
