fix signals reactivity: added signal into if() condition, since effects with signals inside conditionals {} don't work

--- a/src/punts/components/map/map.component.html
+++ b/src/punts/components/map/map.component.html
@@ -1,1 +1,4 @@
 <div id="map"></div>
+<ng-container *ngFor="let marker of markersArr(); let i = index">
+    <div>{{marker.lat}}</div>
+</ng-container>
