delete div sub map map-component; add footer and polish landing (paddings, text)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,10 @@
     <router-outlet></router-outlet>
     <div id="map"></div>
 </main>
+
+<!--FOOTER-->
+<div class="bg-dark mt-5 text-center d-flex flex-column justify-content-center" style="height:150px">
+    <span style="color:white"> © El senyor de cada dia 2023    |    Cookies Policy    |    Privacy Policy    |    Legal Terms
+    <!-- <img alt="logo" src="./assets/images/IMG-20230625-WA0006.jpg" style="height:90px"> -->
+    </span>
+</div>
