--- a/src/punts/punts.component.html
+++ b/src/punts/punts.component.html
@@ -3,12 +3,12 @@
 
 <section class="mb-5">
   <h3 class="text-crimson">Mapa de punts guardats</h3>
-  <div class="text-crimson">
+  <p class="text-crimson">
     Clica el punt del mapa que vulguis afegir. A sota del mapa podràs completar
     la informació. Clica el botó "Crea el punt" i veuràs com s'afegeix un punt
     al mapa i com apareix la targeta del nou punt a la col·lecció de baix. Les
     dues primeres targetes hi són per defecte, les pots eliminar.
-  </div>
+  </p>
 
   <app-map
     class="mb-3"
