--- a/src/landing/landing.component.html
+++ b/src/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="text-center text-crimson mb-4" style="font-size:2.5rem; max-width:65%; margin:auto">Guarda els teus llocs preferits per fer una pausa, llegir, treballar...
     i les rutes per on t'agrada passejar</div>
-    <p class="mb-4 justify">El poeta Josep Carner va deixar escrit en un poema que de gran li agradaria passar el temps en un jardí "de brollador ben clar", 
+    <p class="mb-4 justify">El poeta Josep Carner va deixar escrit en un <a href="https://www.nuvol.com/llibres/belgica-el-poema-dexili-de-josep-carner-48927" target="_blank">poema</a> que de gran li agradaria passar el temps en un jardí "de brollador ben clar", 
         i que en veure-l'hi "De mi dirien nens amb molles a la mà: 'És el senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
         descobrir racons per descansar, passejar, llegir, fer feina (—jardins, places, cafeteries)... aquesta aplicació és per a tu. Hi pots guardar una col·lecció de "punts" i una altra de "rutes" 
         amb la localització al mapa i les notes que hi vulguis afegir. Sigui per recordar detalls de tipus pragmàtic 
