punts-comp: change text to deleteAll button

--- a/src/punts/punts.component.html
+++ b/src/punts/punts.component.html
@@ -136,6 +136,6 @@
     (click)="deleteAllMarkers()"
     class="btn btn-danger mx-auto mt-4 text-crimson"
   >
-    Elimina tots els marcadors que has afegit
+    Elimina tots els punts
   </button>
 </section>
