add links to header, set responsive order in landing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
-<!--HEADER-->
-<div class="bg-dark p-4 mb-3 mb-md-5 d-flex align-items-center justify-content-center" style="position:relative">
+
+<!--nav-->
+<nav class="navbar navbar-expand-lg bg-dark p-4 mb-3 mb-md-5 flex-column flex-xl-row justify-content-center" style="position:relative">
     <a routerLink="/" class="d-none d-xl-inline-block" style="position:absolute;left:3rem">
         <img alt="logo" src="./assets/images/IMG-20230625-WA0006.jpg" style="height:90px">
     </a>
-    <h1 class="text-center text-white">
-        <!-- <small class="me-3 d-block d-xl-inline mb-3 mb-xl-0" style="font-size:1.2rem">Dirien nens amb
-        molles a la mà: -és </small> -->
+    <h1 class="text-center text-white w-100">
         El senyor de cada dia
     </h1>
-</div>
+    <div>
+        <a class="me-3" routerLink="/punts">Punts</a>
+        <a routerLink="/rutes">Rutes</a>
+    </div>
+</nav>
 <!--MAIN-->
 <main class="m-3 m-md-4 m-lg-5">
     <router-outlet></router-outlet>
