--- a/src/landing/landing.component.html
+++ b/src/landing/landing.component.html
@@ -1,18 +1,62 @@
-<div class="text-center text-crimson mb-4" style="font-size:2.5rem; max-width:65%; margin:auto">Guarda els teus llocs preferits per fer una pausa, llegir, fer feina...
-    i les rutes per on t'agrada passejar</div>
-    <p class="mb-4 justify">Josep Carner va deixar escrit en un <a href="https://www.nuvol.com/llibres/belgica-el-poema-dexili-de-josep-carner-48927" target="_blank">poema</a> que de gran li agradaria passar el temps en un jardí "de brollador ben clar", 
-        i que en veure-l'hi "De mi dirien nens amb molles a la mà: 'És el senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
-        descobrir racons per descansar, passejar, llegir, fer feina (—jardins, places, cafeteries)... aquesta aplicació és per a tu. Hi pots guardar una col·lecció de "punts" i una altra de "rutes" 
-        amb la localització al mapa i les notes que hi vulguis afegir. Sigui per recordar detalls de tipus pragmàtic 
-        (Hi ha gaire soroll? Quant costa el cafè?) o com a àlbum sentimental.
-    </p>
-<div class="row g-0 justify-content-center pt-3 pt-sm-4 pb-5">
-    <a routerLink="/punts" class="me-5 me-lg-5 col-5 col-lg-4" style="position:relative">
-        <img alt="senyor llegint" src="./assets/images/senyor-lector.png" style="width:100%">
-        <span class="img-text text-center text-dark" style="position:absolute; max-width: 50%; top: 18%; right:15px; font-size:1.2em">Llocs per estar tranquil</span>
+<div class="wrapper d-flex flex-column">
+  <div
+    class="entrada d-flex flex-column text-center text-crimson mb-4 order-3 order-md-2"
+    style="font-size: 2.5rem; max-width: 65%; margin: auto"
+  >
+    Guarda els teus llocs preferits per fer una pausa, llegir, fer feina... i
+    les rutes per on t'agrada passejar
+  </div>
+  <p class="mb-4 justify order-4 order-md-3">
+    Josep Carner va deixar escrit en un
+    <a
+      href="https://www.nuvol.com/llibres/belgica-el-poema-dexili-de-josep-carner-48927"
+      target="_blank"
+      >poema</a
+    >
+    que de gran li agradaria passar el temps en un jardí "de brollador ben
+    clar", i que en veure-l'hi "De mi dirien nens amb molles a la mà: 'És el
+    senyor de cada dia.'" Si tu també ets un senyor de cada dia a qui li agrada
+    descobrir racons per descansar, passejar, llegir, fer feina (—jardins,
+    places, cafeteries)... aquesta aplicació és per a tu. Hi pots guardar una
+    col·lecció de "punts" i una altra de "rutes" amb la localització al mapa i
+    les notes que hi vulguis afegir. Sigui per recordar detalls de tipus
+    pragmàtic (Hi ha gaire soroll? Quant costa el cafè?) o com a àlbum
+    sentimental.
+  </p>
+  <div class="row g-0 justify-content-center pt-3 pt-sm-4 pb-5 order-2 order-md-4">
+    <a
+      routerLink="/punts"
+      class="me-5 me-lg-5 col-5 col-lg-4"
+      style="position: relative"
+    >
+      <img
+        alt="senyor llegint"
+        src="./assets/images/senyor-lector.png"
+        style="width: 100%"
+      />
+      <span
+        class="img-text text-center text-dark"
+        style="
+          position: absolute;
+          max-width: 50%;
+          top: 18%;
+          right: 15px;
+          font-size: 1.2em;
+        "
+        >Llocs per estar tranquil</span
+      >
     </a>
-    <a routerLink="/rutes" class="col-5 col-lg-4" style="position:relative">
-        <img alt="senyor passejant" src="assets/images/senyor-pg.png" style="width:100%">
-        <span class="img-text text-dark fw-bold" style="position:absolute; top: 18%; right:15px; font-size:1.2em">Rutes per passejar</span>
+    <a routerLink="/rutes" class="col-5 col-lg-4" style="position: relative">
+      <img
+        alt="senyor passejant"
+        src="assets/images/senyor-pg.png"
+        style="width: 100%"
+      />
+      <span
+        class="img-text text-dark fw-bold"
+        style="position: absolute; top: 18%; right: 15px; font-size: 1.2em"
+        >Rutes per passejar</span
+      >
     </a>
+  </div>
 </div>
