--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 
 <!--nav-->
-<nav class="navbar navbar-expand-lg bg-dark p-4 mb-3 mb-md-5 flex-column flex-xl-row justify-content-center" style="position:relative">
-    <a routerLink="/" class="d-none d-xl-inline-block" style="position:absolute;left:3rem">
+<nav class="navbar navbar-expand-lg bg-dark px-5 py-4 mb-3 mb-md-5 flex-column flex-xl-row justify-content-between" style="position:relative">
+    <a routerLink="/" class="d-none d-xl-inline-block">
         <img alt="logo" src="./assets/images/IMG-20230625-WA0006.jpg" style="height:90px">
     </a>
     <h1 class="text-center text-white w-100">
         El senyor de cada dia
     </h1>
-    <div>
+    <div class="">
         <a class="me-3" routerLink="/punts">Punts</a>
         <a routerLink="/rutes">Rutes</a>
     </div>
