migrate to standalone components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,11 @@
 <!--MAIN-->
 <main class="m-3 m-md-4 m-lg-5">
     <router-outlet></router-outlet>
-    <div id="map"></div>
 </main>
 
 <!--FOOTER-->
 <div class="bg-dark mt-5 text-center d-flex flex-column justify-content-center" style="height:150px">
-    <span style="color:white"> © El senyor de cada dia 2023    |    Cookies Policy    |    Privacy Policy    |    Legal Terms
+    <span style="color:white"> © El senyor de cada dia 2023<span class="mx-3">|</span>Roger Miret
     <!-- <img alt="logo" src="./assets/images/IMG-20230625-WA0006.jpg" style="height:90px"> -->
     </span>
 </div>
